@@ -28,6 +28,10 @@ AnyEvent
 
 =item *
 
+AnyEvent::Finger
+
+=item *
+
 AnyEvent::Ident
 
 =item *
