@@ -28,6 +28,7 @@ remove = strict
 
 [Prereqs]
 AnyEvent                                       = 0
+AnyEvent::Finger                               = 0
 AnyEvent::Ident                                = 0
 AnyEvent::Open3::Simple                        = 0
 App::Ack                                       = 0
